--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,9 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        show_sql: true
+        globally_quoted_identifiers: true
+        globally_quoted_identifiers_skip_column_definitions: true
+        show_sql: false
         use_sql_comments: true
         format_sql: true
 
